# gazetta-bin

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
.cargo/: config
.github/workflows/: release.yml
src/: link.rs  main.rs  meta.rs  person.rs  renderer.rs
