[package]
name = "gazetta-bin"
version = "0.1.5"
authors = ["Steven Allen <steven@stebalien.com>"]
description = "A static site generator."
documentation = "http://stebalien.com/projects/gazetta"
homepage = "http://stebalien.com/projects/gazetta"
repository = "https://github.com/Stebalien/gazetta"
keywords = ["staticsite", "website", "blog"]
license = "GPL-3.0"
build = "build.rs"

[[bin]]
name="gazetta"
path="src/main.rs"

[profile.dev]
codegen-units=4

[dependencies]
horrorshow = "0.5"
gazetta = "^0.1.2"

[build-dependencies]
gazetta = "^0.1.2"
