[package]
name = "gazetta-bin"
version = "0.6.1"
authors = ["Steven Allen <steven@stebalien.com>"]
description = "A static site generator."
documentation = "http://stebalien.com/projects/gazetta"
homepage = "http://stebalien.com/projects/gazetta"
repository = "https://github.com/Stebalien/gazetta"
keywords = ["staticsite", "website", "blog"]
license = "GPL-3.0"
build = "build.rs"
edition = "2024"

[[bin]]
name="gazetta"
path="src/main.rs"

[profile.dev]
codegen-units=4

[profile.release]
lto = true
panic = "abort"

[dependencies]
horrorshow = "0.8.8"
gazetta = "0.6.1"

[build-dependencies]
clap_complete = "4.5.50"
gazetta = "0.6.1"
clap = "4.5.38"
